syntax = "proto3";

package greet;

option go_package = "github.com/vergissberlin/go-tutorial-grpc/greet/proto";

message GreetingRequest {
    string first_name = 1;
    string last_name = 2;
}

message GreetingResponse {
    string result = 1;
}

service GreetService {
    rpc Greet(GreetingRequest) returns (GreetingResponse);
}



